# test-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
.github/workflows/: backend-cd.yml  backend-ci.yml
app/: __init__.py  database.py  extensions.py  models.py  routes.py  utils.py
migrations/versions/: 0db1eab8c78a_seed_initial_roles_and_permissions.py  9a9dbc7292b8_remove_password_hash_from_users_table.py  9cc4f012508b_add_auth0_user_id_to_users_table.py  e7c1d26245b0_initial_database_schema.py
monitoring/grafana/dashboards/: test-dashboard.json
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.dev.yml  prometheus.prod.yml  prometheus.staging.yml
monitoring/promtail/: promtail-config.yml
